# craftstudio

./: CLAUDE.md
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  config.rs  craftnet_adapter.rs  daemon_manager.rs  lib.rs  main.rs
apps/desktop/src/components/: ActivityLog.tsx  AddInstanceModal.tsx  ContentHealthDetail.tsx  DaemonNodes.tsx  DaemonOffline.tsx  DataCraftActivity.tsx  DataTable.tsx  EmptyState.tsx  HealthTimeline.tsx  InstanceTabBar.tsx  Modal.tsx  NetworkHealth.tsx  Sidebar.tsx  StatCard.tsx  StatusBar.tsx  SwarmVisualizer.tsx  Tabs.tsx  TimeChart.tsx
apps/desktop/src/hooks/: useActiveInstance.ts  useDaemon.ts  usePeers.ts  useWebSocket.ts
apps/desktop/src/lib/: instanceDefaults.ts  rpc.ts
apps/desktop/src/modules/compute/: ComputePage.tsx
apps/desktop/src/modules/dashboard/: DashboardPage.tsx
apps/desktop/src/modules/data/: DataDashboard.tsx
apps/desktop/src/modules/data/components/: NetworkPeersView.tsx
apps/desktop/src/modules/data/tabs/: AggregatorTab.tsx  ClientTab.tsx  RelayTab.tsx  StorageTab.tsx
apps/desktop/src/modules/filesystem/: FilesystemPage.tsx
apps/desktop/src/modules/identity/: IdentityPage.tsx
apps/desktop/src/modules/node/: NodePage.tsx
apps/desktop/src/modules/security/: SecurityPage.tsx
apps/desktop/src/modules/settings/: SettingsPage.tsx
apps/desktop/src/modules/tunnel/: TunnelDashboard.tsx
apps/desktop/src/modules/wallet/: WalletPage.tsx
apps/desktop/src/services/: config.ts  daemon.ts
apps/desktop/src/store/: computeStore.ts  configStore.ts  craftObjStore.ts  daemonStore.ts  dataCraftStore.ts  filesystemStore.ts  identityStore.ts  instanceStore.ts  securityStore.ts  tunnelStore.ts  walletStore.ts
apps/desktop/src/types/: config.ts
