[package]
name = "craftstudio"
version = "0.1.0"
edition = "2021"
description = "CraftStudio Desktop - Unified Craftec Client"

[lib]
name = "craftstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "craftstudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
