[package]
name = "craftstudio"
version.workspace = true
edition.workspace = true
description = "CraftStudio Desktop - Unified Craftec Client"

[lib]
name = "craftstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "craftstudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = "5"
bs58 = { workspace = true }
rfd = "0.15"

# In-process daemons
craftobj-daemon = { workspace = true }
craftnet-daemon = { workspace = true }
craftec-ipc = { workspace = true, features = ["websocket"] }
craftec-network = { workspace = true }
craftec-keystore = { workspace = true }
craftec-identity = { workspace = true }
craftec-logging = { workspace = true }
libp2p = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
